--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,14 @@ footer p {
     margin-right: auto;
 
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
 @media screen and (max-width:600px){
  
     .portfolio__img{
