--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ header a {
     color:#191818;
 }
 .portfolio__single p {
-    font-size: 12px;
-    color: #868380;
+    font-size: 14px;
+    color: #0f0f0f;
     line-height: 20px;
     margin-top: 4px !important;
     display: inline-block;
